--- a/owner_auth_plugin/_manifest.json
+++ b/owner_auth_plugin/_manifest.json
@@ -12,8 +12,8 @@
   "host_application": {
     "min_version": "0.10.0"
   },
-  "homepage_url": "https://github.com/MaiM-with-u/maibot",
-  "repository_url": "https://github.com/MaiM-with-u/maibot",
+  "homepage_url": "https://github.com/khiqwq",
+  "repository_url": "https://github.com/khiqwq/owner_auth_plugin",
   "keywords": ["authentication", "owner", "security", "identity", "patch"],
   "categories": ["Security", "Authentication"],
   
