--- a/_manifest.json
+++ b/_manifest.json
@@ -1,25 +1,29 @@
 {
   "manifest_version": 1,
-  "name": "用户身份验证插件 (User Authentication Plugin)",
+  "name": "主人身份验证插件 (Owner Authentication Plugin)",
   "version": "1.2.1",
-  "description": "为麦麦机器人提供用户身份验证功能，在思考流程前验证发言者身份，支持多用户独立配置，兼容0.11.5版本",
+  "description": "为麦麦机器人提供用户身份验证功能，支持多用户独立配置，自定义提示词模板，兼容MaiBot 0.11.5+",
   "author": {
     "name": "风花叶",
     "url": "https://github.com/khiqwq"
   },
   "license": "GPL-v3.0-or-later",
-  
   "host_application": {
     "min_version": "0.11.5"
   },
   "homepage_url": "https://github.com/khiqwq",
   "repository_url": "https://github.com/khiqwq/owner_auth_plugin",
-  "keywords": ["authentication", "owner", "security", "identity", "patch"],
+  "keywords": [
+    "authentication",
+    "user",
+    "security",
+    "identity",
+    "multi-user",
+    "prompt-injection"
+  ],
   "categories": ["Other"],
-  
   "default_locale": "zh-CN",
   "locales_path": "_locales",
-  
   "plugin_info": {
     "is_built_in": false,
     "plugin_type": "security",
@@ -36,12 +40,11 @@
     "features": [
       "用户身份验证",
       "多用户独立配置",
+      "自定义提示词模板",
+      "User数量控制",
       "高优先级事件处理",
-      "思考流程前介入",
-      "安全身份识别",
-      "0.11.5版本兼容",
       "补丁自动管理",
-      "插件卸载时自动清理"
+      "Debug模式控制"
     ]
   }
 }
